0.9
first public release